Sitemap can now have multiple urls as per robots.txt spec